--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <title>Kelompok 3 - Citra Blur (Gaussian Blur)</title>
+	<style>
+      body{
+        background-image: url('./img/backx.png');
+        background-repeat: no-repeat;
+        background-size: auto;
+        background-position: 50% 50%;
+        background-origin: padding-box;
+        background-attachment: f;
+        background-color: #16151d;
+        max-height: 100vh;
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
